update: 1.1.4 change model name